--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'com.google.android.gms:play-services-tasks:18.0.0'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
+
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
+    implementation 'com.google.firebase:firebase-auth'
 }
