add realm local storage for recipes and ingredients

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id 'realm-android'
 }
 
 Properties properties = new Properties()
@@ -52,4 +53,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.1.8"
 }
