--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@
 buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath "io.realm:realm-gradle-plugin:10.4.0"
+    }
+
+    repositories {
+        google()
+        mavenCentral()
     }
 }
 
@@ -10,4 +16,9 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
 }
 
-allprojects {}
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
