--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
                 android:value="" />
         </activity>
         <activity android:name=".auth.LoginActivity" />
+        <activity android:name=".RecipeDetailActivity"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
