recipe reviews + camera integration + imgur api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField 'String', 'GOOGLE_SIGN_IN_API_KEY', properties['GOOGLE_SIGN_IN_API_KEY']
+        buildConfigField 'String', 'IMGUR_CLIENT_ID', properties['IMGUR_CLIENT_ID']
     }
 
     buildTypes {
