--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-tasks:18.0.0'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
+    implementation 'com.google.android.material:material:1.9.0'
+
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
